Enables specifying mac address in config.yml

--- a/config.yml.example
+++ b/config.yml.example
@@ -2,6 +2,7 @@ project: 'magento2'
 type: 'magento2'
 ip: '192.168.254.90'
 #pubip: '192.168.2.254'
+#mac: '08de08de08de'
 path: '../magento2'
 memory: 1024
 cpus: 1
